Implementação do swagger na API REST
Implementação do swagger na API REST.
A documentação da API pode ser acessada pelo link http://localhost:3000/api-docs/
