# APIRest/index.js
@@ -1,21 +1,33 @@
+// Como configurar as rotas:
 // https://blog.4linux.com.br/como-organizar-e-manipular-rotas-com-node-js-e-express/
+
+// Vídeo para incluir o swagger nesse projeto:
+// https://www.youtube.com/watch?v=WhFx2heoFrA
+
+// Para acessar a documentação swagger dessa API REST, acesse:
+// http://localhost:3000/api-docs/
+
+// Documentação oficial da especificação swagger:
+// https://swagger.io/specification/
 
 require('dotenv').config();
 
 const https = require('https');
 const express = require('express');
+const userRouter = require('./routes/userRoutes');
+
 const bodyParser = require('body-parser');
-const userController = require('./controllers/userController');
+
+const swaggerUI = require("swagger-ui-express");
+const swaggerDocs = require("./swagger.json");
 
 const app = express();
-
+app.use(express.json());
 app.use(bodyParser.json());
+app.use(userRouter);
 
-app.get('/Usuario/:id', userController.getOne);
-app.post('/Usuario/Create', userController.Create);
-app.post('/Login', userController.Login);
-app.delete('/Usuario/:id', userController.delete);
-app.put('/Usuario', userController.Update);
+// Configurando o Swagger  
+app.use("/api-docs", swaggerUI.serve, swaggerUI.setup(swaggerDocs));
 
 app.get('/', (req, res) => {
     return res.json({mensagem: 'Nossa API REST está funcionando'})
